<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.zooseeker.viewmodels.PlanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GroupTest.HomeActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:text="Directions"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textView"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:hint="@string/planned_count"
                    android:iconifiedByDefault="false"
                    android:text="@{`(` + vm.remainingExhibits.toString() + `)`}"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/routeSummaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Route Summary" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/next_button"
                android:text="MOCK LOCATION"
                android:layout_centerHorizontal="true"
                android:onClick="onMockButtonClicked"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="onLaunchNextClicked"
                android:text="@{vm.buttonText}"
                app:cornerRadius="0dp" />

            <RelativeLayout
                android:id="@+id/name_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topbar"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/animal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:hint="Exhibit Name"
                    android:text="@{ vm.curExhibitName.toString() + ` `}"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/distance_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_header"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/animal_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:hint="Distance"
                    android:text="@{ vm.curExhibitDist.toString() + ` feet away`}"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="24sp"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/direction_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/next_button"
                android:layout_below="@id/distance_header"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                tools:listitem="@layout/direction_item" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>