...
                    android:layout_centerInParent="true"
                    android:text="Planned Exhibits"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/hide_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="onHideClicked"
                    android:text="Hide" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/plansummary_rv"
                android:layout_width="match_parent"
...
