<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/eraseSelectedExhibitsButton"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/trash_bin"
        android:iconTint="@color/white"
        />
</menu>